--- a/StudyTracker/pom.xml
+++ b/StudyTracker/pom.xml
@@ -11,6 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 <dependencies>
+<dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.28.0</version>
+</dependency>
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -37,7 +42,20 @@
                     </goals>
                 </execution>
             </executions>
-        </plugin>  
+        </plugin>
+<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-checkstyle-plugin</artifactId>
+      <version>2.17</version>
+      <configuration>
+        <configLocation>checkstyle.xml</configLocation>
+      </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jxr-plugin</artifactId>
+      <version>2.5</version>
+    </plugin>  
     </plugins>
 </build>
 </project>
