--- a/StudyTracker/pom.xml
+++ b/StudyTracker/pom.xml
@@ -22,6 +22,12 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.maven.plugin-tools</groupId>
+        <artifactId>maven-plugin-annotations</artifactId>
+      <version>3.1</version>
+      <type>jar</type>
+    </dependency>
 </dependencies>
 <build>
     <plugins>
@@ -55,7 +61,27 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jxr-plugin</artifactId>
       <version>2.5</version>
-    </plugin>  
+    </plugin>
+<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>studytracker.Main</mainClass>
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>  
     </plugins>
 </build>
 </project>
