--- a/StudyTracker/pom.xml
+++ b/StudyTracker/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.0</version>
+	    <configuration>
+		<exculdes>
+			<exclude>studytracker/ui/*</exclude>
+		</excludes>
             <executions>
                 <execution>
                     <id>default-prepare-agent</id>
