--- a/StudyTracker/pom.xml
+++ b/StudyTracker/pom.xml
@@ -44,6 +44,7 @@
 		<excludes>
 			<exclude>studytracker/ui/*</exclude>
 		</excludes>
+	    </configuration>
             <executions>
                 <execution>
                     <id>default-prepare-agent</id>
